--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./sketch.js" defer></script>
 </head>
 <body>
+    <button class="editButton">Edit Grid Dimensions</button>
     <div class="container"></div>
 </body>
 </html>
